<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/window_paddingRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUserActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo_register"
                android:contentDescription="@string/register_logo_descriptionApp"
                android:layout_width="@dimen/logo_register_users"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_height="@dimen/logo_register_users"
                android:layout_gravity="center"
                android:src="@drawable/ic_pet_hotel_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                style="@style/boxRounded"
                app:startIconDrawable="@drawable/ic_account_user_circle"
                android:hint="@string/register_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name_register"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cellphone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                style="@style/boxRounded"
                app:startIconDrawable="@drawable/ic_phone"
                android:hint="@string/register_cellphone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_cellphone_register"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                style="@style/boxRounded"
                app:startIconDrawable="@drawable/ic_email"
                android:hint="@string/register_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email_register"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                style="@style/boxRounded"
                app:startIconDrawable="@drawable/ic_lock"
                android:hint="@string/register_password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password_register"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/register_sign_up"
                android:textColor="@color/red"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:text="@string/register_start_whit_social_network"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_facebook_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/margin_48"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:background="@color/facebook_color"
                        android:textColor="@color/white"
                        android:text="@string/register_facebook" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_google_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/google_color"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_48"
                        android:text="@string/register_google"/>
                </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>

