<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

<androidx.coordinatorlayout.widget.CoordinatorLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/ic_menu"
        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
        android:background="@android:color/transparent"
        android:elevation="0dp" />

</com.google.android.material.appbar.AppBarLayout>

<!-- Screen content -->
<!-- Use app:layout_behavior="@string/appbar_scrolling_view_behavior" to fit below top app bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/window_padding_tips"
        tools:context=".SearchContact"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_40"
            android:layout_gravity="center"
            android:text="@string/contacto_search_garden"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_8">

            <ImageView
                android:id="@+id/iv_init"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_24"
                android:layout_gravity="start"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/contacto_home"
                android:src="@mipmap/ic_launcher_round"
                app:srcCompat="@drawable/home_circle"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="@dimen/margin_90"
                android:layout_height="@dimen/margin_20"
                android:text="@string/contacto_location"
                android:textAlignment="center"
                android:textColor="@color/red_dark"
                android:layout_weight="3"/>

            <ImageView
                android:id="@+id/iv_out"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_24"
                android:layout_gravity="end"
                android:contentDescription="@string/out_contact"
                android:src="@mipmap/ic_launcher_round"
                app:srcCompat="@drawable/close_circle_outline"
                android:layout_weight="1"/>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:hint="@string/contacto_search_garden"
            app:startIconDrawable="@drawable/ic_search">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigation_drawer"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:menu="@menu/navigation_drawer"
    app:headerLayout="@layout/header_navigation_drawer"/>

    </androidx.drawerlayout.widget.DrawerLayout>


